fixing basic auth

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ RUN yum install -y nginx
 RUN rm -v /etc/nginx/nginx.conf
 
 COPY nginx.conf /etc/nginx/
-COPY .htpasswd /etc/nginx/
+# COPY .htpasswd /etc/nginx/
 COPY dist /app
 
 EXPOSE 80
